--- a/howMoney/howMoney.csproj
+++ b/howMoney/howMoney.csproj
@@ -20,6 +20,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.16" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +31,8 @@
     <None Remove="Microsoft.EntityFrameworkCore.Tools" />
     <None Remove="Models\" />
     <None Remove="Data\" />
+    <None Remove="Microsoft.AspNetCore.Mvc.NewtonsoftJson" />
+    <None Remove="Microsoft.AspNetCore.JsonPatch" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
